# fcs-ql-python

./: .flake8  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
docs/: conf.py  requirements.txt
docs/reference/: antlr_auto_gen.rst  fcsql.__init__.rst  fcsql.parser.rst  fcsql.validation.rst  index.rst
examples/: run_parse.py
src/fcsql/: FCSLexer.py  FCSParser.py  FCSParserListener.py  FCSParserVisitor.py  __init__.py  parser.py  validation.py
tests/: conftest.py
tests/regression/: README.md  test_regression.py
tests/validation/: test_validation.py
